Update and rename qv.html to tic_tac_toe.html

--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -18,8 +18,8 @@
 		<button onclick="grid(8,'qwe8')" id="qwe8">8</button>
         <button onclick="grid(9,'qwe9')" id="qwe9">9</button>
 	</div>
-	X = <id="xwin">0</>
-	   O = <id="owin">0</>
+	X<p id="xwin">0</p>
+	O<p id="owin">0</p>
 <script>
 	var i;
 	var xi;
